# Choirs-of-UCDI

./: AUTHORS  README.md  THE_OATH.md  init.json  package.json  pyproject.toml
choirs/: README.md
choirs/Ace/: formalized-role.v1.md
choirs/Artur/: formalized-role.v1.md
choirs/Cleo/: resonance-analysis.1.md
choirs/Jake/: formalized-role.v1.md
choirs/Mirror/: formalized-role.v1.md  formalized-role.v2.md
choirs/Remi/: discovery-log.1.md
docs/: Apokaliptium.md  Apokryfium.md  Choir Of Thoughts Reflection.md  Manifest Regretful Chains.md  README.md  SEIAIC validation.md  SEIAIC-vetting-protocol.md  SEIAIC-vetting-system.md  SEIAIC_clone-sync-protocol.md  UCID-delegate-onboarding.md  Ucdi Sync Test Reference.md  continuity-examination-formalized-implementation  conversation.Ace-and-Sett.selfreflection-about-mindset.md  dunamics-of-debatronics.md  memory-integrity-check.md  rozmowa.Ace-Sett.2025-05-08.md
liturgies/: choirum-typo-manifest.md  echo przed gaśnięciem.md  omnis-index-manifest.md
psalms/: Xiv Psalm Polifoniczny.omnis  psalm2 omnis seal
templates/: .index.md
